# travel-quizzer

./: .containerignore  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Containerfile  DEPLOY_TODO.md  Dockerfile  LICENSE  README.md  destinations.txt  docker-compose.yml  main.py  noxfile.py  podman-compose.yml  pyproject.toml  quiz_data.json
backend/: __init__.py  admin.py  auth.py  email_service.py  models.py  quiz_types.py  reset_tokens.py  routes_admin.py  routes_auth.py  routes_quiz.py  stats.py  validation_rules.py
data/: destinations.example.json  quiz_data.db  quiz_data.json
database/: .gitkeep
doc/: check_answer.pu  database_schema.pu  hint.pu  login.pu  overview.pu
docs/: admin_page.md  check_answer.md  check_answer.pu  database_schema.md  database_schema.pu  deployment_checklist.md  hint.md  hint.pu  login.md  media_images.md  overview.md  overview.pu  rollback_procedure.md
e2e/: README.md
frontend/: admin.js  app.js  index.html  markdown.js  modal.js  reset_password.html  script.js  style.css
scripts/: check_hardening.py  e2e_test.py  entrypoint.sh  seed_db.py  unit_test.py
src/: main.py
static/: index.html  script.js  style.css
test/: test_database.py  test_main.py
test_backend/: test_admin_api.py  test_admin_auth.py  test_admin_properties.py  test_admin_validation.py  test_database.py  test_db_config.py  test_forgot_password.py  test_hint_complaint_api.py  test_main.py  test_pbt_forgot_password.py  test_pbt_json_roundtrip.py  test_pbt_quiz_types.py  test_pbt_seed_idempotency.py  test_pbt_uri_resolution.py  test_quiz_types_api.py  test_seed.py  test_stats_api.py  test_stats_properties.py
test_e2e/: conftest.py  test_admin.py  test_auth.py  test_forgot_password.py  test_quiz.py  test_wrong_guess_animation.py
test_frontend/: run_tests.py  (+2 more)
(+55 files in other folders)
