[project]
name = "travel-quizzer"
version = "0.1.0"
description = "Webapp for running travel-related quizzes"
authors = [
    {name = "Magnus Leone", email = "magnus.falk@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "flask>=3.1.3,<4.0.0",
    "flask-cors>=6.0.2,<7.0.0",
    "flask-limiter[redis]>=3.5.0,<4.0.0",
    "uvicorn>=0.48.0,<0.49.0",
    "flask-sqlalchemy>=3.1.0,<4.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
]

[project.scripts]
unit-test = "scripts.unit_test:main"
e2e-test = "scripts.e2e_test:main"

[dependency-groups]
test = [
    "pytest>=8.0,<9.0",
    "pytest-playwright>=0.5,<1.0",
]
dev = [
    "black>=24.0,<25.0",
    "isort>=5.13,<6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-packages = true
packages = ["backend", "scripts"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["test_e2e"]
